# Optimizer

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
demos/: demoOptimizer.cpp
include/Defs/: defs.h
include/Optimizer/: cmaes.h  optimizer.h  pso.h
resources/: CMAES.xml  PSO.xml  configGlobal.xml
src/Defs/: defs.cpp
src/Optimizer/: cmaes.cpp  pso.cpp
